--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ header #navbar{
 #moon {
     top: -550px;
    
-    background-image: url('/images/moon.jpeg');
+    background-image: url('./images/moon.jpeg');
     width: 100%;
     height: 1100px;
     background-size: cover;
@@ -170,7 +170,7 @@ header #navbar{
 #earth{
     top:1000px;
     left: 460px;
-    background-image: url('/images/earth.jpg');
+    background-image: url('./images/earth.jpg');
     background-repeat: no-repeat;
     position: fixed;
     width: 100%;
