--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ li #noro{
         transform: translateY(0px);
     }
 }
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 940px) {
     header{
         display: flex;
         
@@ -408,8 +408,8 @@ li #noro{
     }
 
     #moon{
-        top:-265px;
-        width: 500px;
+        top:-365px;
+        width: 650px;
         height: 100vh;
         right:0px;
         transform: scale3d(0.2,0.2,0.2);
@@ -441,15 +441,28 @@ li #noro{
     margin-top: 10px;
    }
    #earth{
-        width: 150%;
-        height: 100vh;
+        width: 130%;
+        height: 90vh;
         position: fixed;
         float: left;
-        left: -110px;
-        top:0px;
-        
-        
-      
+        left: -90px;
+        animation: movbdown 3s forwards;
    }
-
+   @keyframes movbdown {
+    100%{
+        top: 750px;
+    }
+    50%{
+        top: 1000px;
+    }
+    25%{
+        top: 2000px;
+    }
+    0%{
+        top: 3000px;
+    }
+    
 }
+
+}  
+
